# debug-tui

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  debug.loh  flake.nix  rustfmt.toml
.github/workflows/: release.yml  rust.yml
demo/: demo.tape
php/: large.php  test.php
sessions/: init.xml  session.md
src/: analyzer.rs  app.rs  channel.rs  config.rs  console.rs  main.rs  notification.rs  php_process.rs  session.rs  theme.rs  workspace.rs
src/app/: mod.rs  notification.rs
src/dbgp/: client.rs
src/event/: input.rs
src/ui/: mod.rs
src/view/: context.rs  eval.rs  help.rs  history.rs  layout.rs  listen.rs  mod.rs  properties.rs  session.rs  source.rs  stack.rs
