[package]
name = "debug-tui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc="*"
[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
better-panic = "0.3.0"
clap = { version = "4.5.35", features = ["derive"] }
crossterm = "0.28.1"
log = "0.4.27"
ordered_hash_map = "0.5.0"
pretty_assertions = "1.4.1"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
simple-logging = "2.0.2"
tokio = { version = "1.44.1", features = ["full"] }
tree-sitter = "0.25.3"
tree-sitter-php = "0.23.11"
tui-input = "0.11.1"
xmlem = "0.3.3"
xmltree = "0.11.0"
